--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <style>
     body {
       color: #000000;
-      background-color: #CCFFCC;
+      background-color: #AAFFCA;
       font-family: Arial, sans-serif;
-      font-size: 16px;
+      font-size: 10px;
     }
     
     h1 {
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>FELICIDADES</h1>
+    <h1>CAMBIO AL GITHU</h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
